@@ -7,6 +7,7 @@ ufw (0.21) UNRELEASED; urgency=low
   * warn if profile name is found in /etc/services
   * don't delete application rules when the action doesn't match
     (LP: #260881)
+  * add reload command
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 18 Aug 2008 20:22:32 -0400
 
